[metadata]
name = klippy
author = Ian Wells
author-email = Kevin O'Connor <kevin@koconnor.net>
summary = The brains of klipper3d
#description-file =
#    README.md
#description-content-type = text/markdown
requires-python = >=3.6
license = GPLv3
classifier =
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    klippy

[entry_points]
console_scripts =
     klippy = klippy.cmd:main
     klippy-parsedump = klippy.parsedump:main
